HelloDockerK8S/quickstart/k8s/k8s-app-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-docker-express
  namespace: sbc2nd
  labels:
    app: hello-docker-express
spec:
  selector:
    matchLabels:
      app: hello-docker-express
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-docker-express
    spec:
      hostname: hello-docker-express
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - hello-docker-express.sbc2nd.svc.cluster.local
          - sbc2nd.svc.cluster.local
      containers:
        - name: hello-docker-express
          image: xprogrammer/hello-docker-express
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /health
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-express
  namespace: sbc2nd
  labels:
    app: hello-docker-express
spec:
  selector:
    app: hello-docker-express
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  type: ClusterIP
