HelloDockerK8S/quickstart/k8s/k8s-app-order-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-docker-console
  namespace: sbc2nd
  labels:
    app: hello-docker-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-docker-console
  template:
    metadata:
      labels:
        app: hello-docker-console
    spec:
      hostname: hello-docker-console
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - hello-docker-console.sbc2nd.svc.cluster.local
          - sbc2nd.svc.cluster.local
      containers:
        - name: hello-docker-console
          image: xprogrammer/hello-docker-console
          ports:
            - containerPort: 30080
          readinessProbe:
            tcpSocket:
              port: 30080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 30080
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
            items:
              - key: nginx.conf
                path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-console
  namespace: sbc2nd
  labels:
    app: hello-docker-console
spec:
  selector:
    app: hello-docker-console
  ports:
    - protocol: TCP
      port: 30080
      targetPort: 30080
      nodePort: 30080
  type: NodePort
