HelloDockerK8S/quickstart/k8s/k8s-app-order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-docker-order
  namespace: sbc2nd
  labels:
    app: hello-docker-order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-docker-order
  template:
    metadata:
      labels:
        app: hello-docker-order
    spec:
      hostname: hello-docker-order
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - hello-docker-order.sbc2nd.svc.cluster.local
          - sbc2nd.svc.cluster.local
      containers:
        - name: hello-docker-order
          image: xprogrammer/hello-docker-order
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-order
  namespace: sbc2nd
  labels:
    app: hello-docker-order
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hello-docker-order
  type: ClusterIP
