HelloDockerK8S/quickstart/k8s/k8s-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: sbc2nd
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      hostname: mysql
      dnsConfig:
        options:
          - name: ndots
            value: "2"
        searches:
          - mysql.sbc2nd.svc.cluster.local
          - sbc2nd.svc.cluster.local
      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          livenessProbe:
            exec:
              command:
                - sh
                - "-c"
                - "mysqladmin -uroot -p'123456' -P3306 -hlocalhost ping"
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - "-c"
                - "mysql -h 127.0.0.1 -u root --password=123456 -e 'SELECT id FROM hellodockerk8s.member ORDER BY id LIMIT 1;'"
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
      volumes:
        - name: mysql-data
          hostPath:
            path: /run/desktop/mnt/host/d/data/k8s-volumes/mysql-data
            type: DirectoryOrCreate
        - name: init-sql
          configMap:
            name: mysql-init-sql
            items:
              - key: ddl.sql
                path: 1.sql
              - key: init.sql
                path: 2.sql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: sbc2nd
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
