HelloDockerK8S/quickstart/k8s/k8s-ingress-order-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-docker-console
  namespace: sbc2nd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-docker-console
            port:
              number: 80
